# auth-microservice

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.MD  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  constants.py  dependencies.py  main.py  routes.py  types.py
app/api/: __init__.py  default_router.py  main.py  require_auth.py  test_default_router.py  users.py  users_router.py
app/domain/: exceptions.py  vos.py
app/domain/models/: test_user.py  user.py
app/domain/models/tokens/: main.py
app/domain/vos/: __init__.py  password.py  tokens.py
app/domain/vos/tokens/: test_main.py
app/repositories/: postgresql.py  types.py  users.py
app/services/: __init__.py  notification_logger.py  test_users.py  users.py
app/utils/: __init__.py  settings.py  setup_environment.py  types.py
bruno/: Change Password.yml  Create User.yml  Delete User.yml  Forgot Password.yml  Login.yml  Logout.yml  Ping.yml  Protected Route.yml  Refresh Token.yml  Reset Password.yml  opencollection.yml
docs/: db_schema.dbml
tests/api/: test_default_router.py
tests/domain/models/: test_user.py
tests/domain/vos/: test_password.py  test_tokens.py
tests/integration/: conftest.py  constants.py  fixtures.py  flows.py  test_change_password.py  test_create_user.py  test_default_router.py  test_default_routes.py  test_delete_user.py  test_forgot_password.py  test_login.py  test_logout.py  test_main.py  test_refresh_token.py  test_reset_password.py
tests/services/: test_users.py
tests/utils/: test_settings.py
