[project]
name = "auth-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.1",
    "pyjwt>=2.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
